--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <img src="gimje.jpeg" alt="Image" style="width:100%">
                 <h4><b>Kimje/Gimje Plantation Work</b></h4>
-                <p>They build their headquarters along with a large plantation at Kimje/Gimje. Some members of the Kim
+                <p>The Taki Seihi Company build their headquarters along with a large plantation at Kimje/Gimje. Some members of the Kim
                     family begin working on their plantation. They are given low wages and face terrible working
                     conditions due to the Japanese unchecked economic power in Korea.
                 </p>
