Added slight change

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h4><b>1910 - Beginning of Japanese occupation of Korea</b></h4>
                 <p>Japanese began migrating to Korea and begin their take over.
                     A Japanese agricultural company Taki Seihi Company, started by Taki Kumejiro, acquires land in
-                    the fertile lands of Honam Plains in Korea.
+                    the fertile lands of Honam Plains in Korea to grow his fertilizer business.
                 </p>
             </div>
         </div>
